# EcoFL

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  reproduce.sh  requirements.txt
ecofl/benchmark/: pipeline.py
ecofl/data/: generator.py
ecofl/energy/: monitor.py
ecofl/federated/: client.py  scheduler.py  server.py
ecofl/models/: lightweight.py
experiments/: ablation_study.py  run_experiments.py  statistical_tests.py  visualize_results.py
results/: ablation_results.json  aggregated_results.json  statistical_tests.json
results/seed_42/: benchmark_results.json  round_history.json
results/seed_43/: benchmark_results.json  round_history.json
results/seed_44/: benchmark_results.json  round_history.json
results/seed_45/: benchmark_results.json  round_history.json
results/seed_46/: benchmark_results.json  round_history.json
tests/: test_data_generator.py  test_models.py  test_pipeline_smoke.py  test_scheduler.py
