[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecofl"
version = "0.1.0"
description = "Energy-Conscious Federated Learning benchmark for IoT edge intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Tymoteusz Miller", email = "tymoteusz.miller@usz.edu.pl"}
]
keywords = [
  "federated learning",
  "edge AI",
  "IoT",
  "energy-aware AI",
  "TinyML",
  "sustainable AI",
  "benchmarking"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "xgboost>=2.0.0",
  "psutil>=5.9.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scipy>=1.11.0",
  "joblib>=1.3.0",
  "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.4.0"
]

[project.urls]
Homepage = "https://github.com/TyMill/ecofl"
Repository = "https://github.com/TyMill/ecofl"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecofl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
